--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "paths": {
+      "components/*": ["./components/*"],
+      "pages/*": ["./pages/*"],
+      "config/*": ["./config/*"],
+      "hooks/*": ["util/*"],
+      "styles/*": ["./styles/*"],
+      "assets/*": ["./assets/*"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
